# muIR

./: README.md  muir.py  pyproject.toml  pytest.ini  test_data.npy
.github/workflows/: ci.yml
ckpts/: ai85-cifar100-dummy.pth.tar
ckpts/random_mcu/: dscnn_small.random.pth  manifest.json  mobilenetv2_tiny.random.pth  tiny_convmixer.random.pth  tiny_resnet8.random.pth
examples/python_api/: 01_basic_torch_to_tflm.py  02_ir_edit_and_partition.py  (+5 more)
inputs/: cifar100_sample.npy
models/: ai85net_simplenet.py  mcu_sota.py  reference_impls.py
runtime/: CMakeLists.txt  main_ai8x.cpp  unpu_runtime.cpp  unpu_runtime.h
scripts/: generate_random_ckpts.py  run_pytest.sh
tests/: test_api_convert.py  test_capabilities_schema.py  test_cli_model_sources.py  test_cli_smoke.py  test_config.py  test_e2e_backends.py  test_e2e_compiled_correctness.py  test_hardware_artifacts.py  test_ir_canonicalization.py  test_ir_capabilities.py  test_ir_enhancements.py  test_ir_schema_enforcement.py  test_ir_validation.py  test_muir_ir.py  test_partition_metrics.py  test_reporting_and_hardware_guarantee.py
unpu_bench/: __init__.py  ai8x_shim.py  ai8x_yaml_from_tosa.py  api.py  backend_hardware.py  backend_lowering.py  backend_runtime.py  bn_fuse.py  cli.py  config.py  devices.py  eprint.py  errors.py  ir_version.py  ircp.py  logging_setup.py  metadata.py  muir.py  passes.py  pipeline.py  quant.py  report_cli.py  reporting.py  repro.py  semantic_check.py  state.py  tosa_ir.py  tosa_lowering.py
unpu_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+12 files in other folders)
